<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorUNSWYellow"
    android:padding="10dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="70dp"
        android:fontFamily="casual"
        android:textColor="@color/colorBlack"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/showResult"/>

    <TextView
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50dp"
        android:fontFamily="casual"
        android:paddingTop="30dp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:fontFamily="casual"
        android:text="Score"
        android:textColor="@color/colorBlack"
        android:textSize="50dp" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlack"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/tryAgain"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnTryAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlack"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/finish"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />






</LinearLayout>