<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_ver"
    android:paddingBottom="@dimen/card_pad"
    android:paddingTop="@dimen/card_pad"
    app:cardBackgroundColor="@color/colorYellow"
    app:layout_goneMarginBottom="@dimen/margin_ver">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/card_ele">

        <TextView
            android:id="@+id/tv_cate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_speed"
            android:layout_margin="@dimen/margin_ver"
            android:fontFamily="casual"
            android:text="@string/category_01"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_ver"
            android:fontFamily="casual"
            android:text="@string/text_diff"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_diff"
            android:layout_margin="@dimen/margin_ver"
            android:fontFamily="casual"
            android:text="@string/text_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_hor"
            android:fontFamily="casual"
            android:text="100"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_speed"
            android:layout_alignBottom="@+id/tv_speed"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_hor"
            android:fontFamily="casual"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </RelativeLayout>

</android.support.v7.widget.CardView>