<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorUNSWYellow"
    android:elevation="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_hor"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/btn_general"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                app:cardCornerRadius="3dp"
                app:cardElevation="@dimen/card_ele"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate01"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/general"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:fontFamily="casual"
                        android:text="@string/category_01"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/icon_cate01" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_fundamental"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate02"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/fundamentals"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate02"
                        android:fontFamily="casual"
                        android:text="@string/category_02"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate03"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/google"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate03"
                        android:fontFamily="casual"
                        android:text="@string/category_03"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_activities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate04"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/activity"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate04"
                        android:fontFamily="casual"
                        android:text="@string/category_04"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_fragments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate05"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/fragments"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate05"
                        android:fontFamily="casual"
                        android:text="@string/category_05"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_intents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate06"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/intents"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate06"
                        android:fontFamily="casual"
                        android:text="@string/category_06"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_database"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorYellow"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="@dimen/card_ele"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_cate07"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@mipmap/database"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_cate07"
                        android:fontFamily="casual"
                        android:text="@string/category_07"
                        android:textSize="24dp"
                        android:paddingLeft="30dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/quickStartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorBlack"
        android:fontFamily="casual"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:text="@string/text_quickStart"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold" />
</RelativeLayout>